Font & spacing fix

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Neucha&display=swap');
+
 body {
   /* display: grid;
   place-content: center; */
@@ -93,7 +95,7 @@ body {
 
 .waterfall {
   width: 80vw;
-  margin: 2em auto;
+  margin: 2em auto 12em;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-gap: 1em;
